# agent-extract

./: .env.template  .gitignore  AGENT_WORKFLOW.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PHASE1_COMPLETE.md  PROJECT_PLAN.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PUBLISH_TO_GITHUB.md  QUICK_REFERENCE.md  README.md  READY_TO_PUBLISH.md  SECURITY_NOTICE.md  USAGE_GUIDE.md  agent-orch-ascii.txt  ai_result.json  main.py  output-md.md  pyproject.toml  test-img-ai.json  test-img-logged.json  test-img.json  test-img.md
data/: .gitkeep
docs/: CLOUD_LLM_PROVIDERS.md  CLOUD_SETUP_NOTE.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  LLM_SELECTION_GUIDE.md  LOCAL_MODELS.md  OCR_SETUP.md  PHASE2_AI_FEATURES.md  PHASE2_COMPLETE.md  WORKFLOW_ANALYSIS.md
scripts/: create_graph_png.py  generate_graph.py  setup.py
src/agent_extract/: __init__.py  ai_extractor.py
src/agent_extract/agents/: __init__.py  base_agent.py  critic_agent.py  extraction_agent.py  graph.py  planner_agent.py  schema_agent.py  state.py  supervisor_agent.py  table_agent.py  validation_agent.py  vision_agent.py
src/agent_extract/api/: __init__.py
src/agent_extract/cli/: __init__.py  main.py
src/agent_extract/core/: __init__.py  config.py  exceptions.py  llm_provider.py  types.py
src/agent_extract/ocr/: __init__.py  ocr_manager.py  paddle_ocr.py  tesseract_ocr.py
src/agent_extract/outputs/: __init__.py  json_formatter.py  markdown_formatter.py
src/agent_extract/processors/: __init__.py  preprocessor.py
src/agent_extract/readers/: __init__.py  base.py  docx_reader.py  factory.py  image_reader.py  pdf_reader.py
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep
tests/integration/: test_ai_extraction.py
tests/unit/: test_core.py  test_formatters.py  test_readers.py
